# angle2test

./: .gitignore  pyproject.toml  readme.md
app/: main.py
app/admin/: articles.py  users.py
app/controllers/: __init__.py  articles.py  users.py
app/core/: admin.py  auth.py  db.py  dependencies.py  enums.py  storage.py
app/models/: articles.py  users.py
app/models/routers/: articles.py
app/routers/: articles.py  users.py
app/schemas/: articles.py  users.py
app/tests/: conftest.py  test_articles.py  test_users.py  utils.py
app/tests/fixtures/: admins.json  articles.json  students.json  teacher_student.json  teachers.json  users.json
