[tool.poetry]
name = "angle2test"
version = "0.1.0"
description = ""
authors = ["Ian Sokolskyi <iansokolskyi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
sqlalchemy = "^2.0.3"
environs = "^9.5.0"
psycopg2-binary = "^2.9.5"
alembic = "^1.9.4"
python-multipart = "^0.0.5"
black = {extras = ["d"], version = "^23.1.0"}
pytest = "^7.2.1"
httpx = "^0.23.3"
pynput = "^1.7.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
